Minor polish for safetensors.